0.0.0
=====
* initial release

0.0.1
=====
* fix a bug with nonstandard pkglibdir
* more access
  - cardlist
  - XPROBE
  - mode
* transfer function plot example

0.0.2
=====
* numpy cleanup
* matrix access
* node map access
* pz analysis command

0.0.3
=====
* improve error handling
* more portable tests (denoise)
* improve python ELEMENT access
* suspend python2 testing
* fix session/cleanup bug
* install decorator (pending)
* findbranch stub
* more ap and sparam example

0.0.4 WIP
=====
* more error reporting/exception handling
* memory fix in pending.install
* cleanup CARD/COMPONENT/ELEMENT hierarchy
* print package version on sign on
* fix memory leak in clone
* fix ELEMENT::_y access (breaks workaround)